# cdp-mcp

./: .env.example  .gitignore  MCP_AUDIT.md  README.md  SUPPORTED_TOOLS.md  TUTORIAL.md  _gen_tools.py  pyproject.toml
src/cdp_mcp/: __init__.py  __main__.py  config.py  server.py
src/cdp_mcp/auth/: auth_provider.py
src/cdp_mcp/docs/: __init__.py  admin_ops_playbook.md  campaign_playbook.md  connector_wizard_playbook.md  customer360_playbook.md  orchestration_playbook.md  reports_dashboards_playbook.md  udmp_metadata_playbook.md  workflow_authoring_playbook.md
src/cdp_mcp/resources/: resource_providers.py
src/cdp_mcp/tools/alerts/: alerts.py
src/cdp_mcp/tools/cache/: cache_ops.py
src/cdp_mcp/tools/campaign/: actions.py  audiences.py  data_exports.py  dataset_defs.py  definitions.py  dispatches.py  messages.py  runs.py  templates.py
src/cdp_mcp/tools/config_api/: a360_rules.py  clusters.py  column_validators.py  compaction_requests.py  dqe_rules.py  emails.py  execution_buckets.py  execution_summary_groups.py  mapping_templates.py  output_connector_defs.py  output_connectors.py  provisioning.py  query_generator.py  schedules.py  schema_checkpoints.py  summary_customizations.py  tenants.py  udmp.py  workflow_jobs.py  workflows.py
src/cdp_mcp/tools/connectors/: connectors.py  templates.py
src/cdp_mcp/tools/dw/: a360.py  audience.py  campaign_meta.py  data_erasure.py  entities.py  metadata.py  offers.py  purge.py  reports.py  rtmeta.py  tracker.py  (+1 more)
src/cdp_mcp/types/: api_responses.py  cdp_types.py
src/cdp_mcp/utils/: error_handler.py  http_client.py
(+25 files in other folders)
