[project]
name = "cdp-mcp-server"
version = "1.0.0"
description = "MCP Server for Acquia Customer Data Platform (CDP)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cdp-mcp = "cdp_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdp_mcp"]
